--- a/assets/style.css
+++ b/assets/style.css
@@ -258,3 +258,11 @@ a.resumeBtn:hover {
 .secondIcon {
   animation: rotateClockwise 20s linear infinite;
 }
+
+@media screen and (max-width: 600px)
+ {
+  h1{
+    font-size: 36px;
+    line-height: 50px;
+  }
+}
